fixing sponsors responsiveness and opportunities card alignment

--- a/src/opportunities/opportunities.css
+++ b/src/opportunities/opportunities.css
@@ -44,6 +44,7 @@ table {
 
 .opp-preview {
   padding: 2vw;
+  width: 100vw;
 }
 
 .opp-post {
